--- a/back/tu-unidad/src/main/resources/application.yml
+++ b/back/tu-unidad/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  jackson:
+    time-zone: America/Bogota
   application:
     name: tu-unidad
   datasource:
@@ -21,3 +23,5 @@ spring:
 
 server:
   port: 8787
+
+
